--- a/StickyHeaders-Demo1.framer/.gitignore
+++ b/StickyHeaders-Demo1.framer/.gitignore
@@ -7,7 +7,8 @@
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -30,7 +31,7 @@ Temporary Items
 
 # Framer Specific
 .temp.html
-framer/*.old.*
+framer/*.old*
 framer/backup.coffee
 framer/backups/*
 framer/.*.hash
